<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtoall"
    tools:context=".C1ResultPage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="155dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/et_logo" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="261dp"
        android:layout_height="34dp"
        android:background="@drawable/bg_tv"
        android:fontFamily="serif-monospace"
        android:text="@string/results"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/resultKwatt"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:background="@drawable/bg_tv"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/total_kilowatt_used"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/resultBill"
        android:layout_width="370dp"
        android:layout_height="149dp"
        android:background="@drawable/bg_tv"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/total_ammount_of_bill"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultBill3"
        android:layout_width="382dp"
        android:layout_height="182dp"
        android:fontFamily="serif-monospace"
        android:text="@string/note_based_from_meralco_philippines_the_rate_for_a_normal_household_is_php11_4348_per_kwh_this_app_mostly_estimates_your_electricity_price_consumption_the_result_may_varies_compared_to_your_official_bill"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/toCustomerP"
        android:layout_width="188dp"
        android:layout_height="61dp"
        android:backgroundTint="#4BAF7C"
        android:fontFamily="monospace"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

</androidx.constraintlayout.widget.ConstraintLayout>