<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtoall"
    tools:context=".B2DashboardFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:id="@+id/amazonName"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/welcome"
            android:textStyle="bold|italic"
            android:textSize="35sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amazonDesc"
            android:text="@string/electrotracker"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonName"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:id="@+id/amazonImage"
            android:src="@drawable/et_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/amazonName"/>

        <Button
            android:id="@+id/toCalculate"
            android:layout_width="161dp"
            android:layout_height="46dp"
            android:background="@drawable/bg_started"
            android:fontFamily="monospace"
            android:text="@string/calculate1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/row1"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amazonDesc" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonImage">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/clothingCard"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/refName"
                        android:textColor="@color/white"
                        android:text="@string/refrigerator"
                        android:textSize="20sp"
                        android:fontFamily="monospace"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/img_ref"/>

                    <ImageView
                        android:id="@+id/img_ref"
                        android:layout_width="81dp"
                        android:layout_height="71dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/i_ref" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lighting"
                        android:text="@string/lightings"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="monospace"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/img_light"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/img_light"
                        android:src="@drawable/i_bulbs"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/homeName"
                        android:text="@string/aircon"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="monospace"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/img_aircon"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/img_aircon"
                        android:src="@drawable/i_aircod"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beautyName"
                        android:text="@string/computer"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="monospace"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/img_gadget"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/img_gadget"
                        android:src="@drawable/i_gadgets"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pharmName"
                        android:textColor="@color/white"
                        android:text="@string/e_fan"
                        android:textSize="20sp"
                        android:fontFamily="monospace"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/img_efan"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/img_efan"
                        android:src="@drawable/i_efan"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/grocName"
                        android:textColor="@color/white"
                        android:text="@string/television"
                        android:textSize="20sp"
                        android:fontFamily="monospace"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/img_tv"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/img_tv"
                        android:src="@drawable/i_tv"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>